feat: JWT auth, security hardening, Railway deployment, clean code
- Add JwtAuthFilter + wire JWT into SecurityConfig (all routes now protected)
- Login endpoint returns JWT token; secret read from JWT_SECRET env var
- Frontend stores token in sessionStorage, apiFetch utility injects Authorization header
- AppLayout guards protected routes, redirects to /login if no token
- Fix signup -> login routing bug (derive isLogin from URL, not state)
- Remove all code comments and @CrossOrigin annotations from all files
- Add security headers in nginx.conf (CSP, X-Frame-Options, etc.)
- CORS restricted via ALLOWED_ORIGINS env var
- Generic auth error messages to prevent user enumeration
- Password minimum raised to 8 chars frontend + backend
- Add railway.toml for backend and frontend, .env.example for deployment
- Remove hardcoded localhost URLs from SecurityTab